# Neural-network-simulation-2

./: CMakeLists.txt  CMakeLists.txt~  Constants.hpp  Doxyfile  README.md  README.txt  experiment.cpp  experiment.h  graph.py  main_neuron.cpp  main_neuron2.cpp  membrane_potential_values.txt  membrane_potential_values2.txt  membrane_potential_values3.txt  network.cpp  network.h  neuron.cpp  neuron.h  neuron2.cpp  neuron2.h  test_neuron.cpp
graphs/Case A/: graph.py
graphs/Case B/: graph.py  spikes_times_neurons.txt
graphs/Case C/: graph.py
graphs/Case D/: graph.py  spikes_times_neurons.txt
